openturns/1.24/_sources/auto_probabilistic_modeling/random_vectors/plot_python_randomvector.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_probabilistic_modeling/random_vectors/plot_python_randomvector.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_probabilistic_modeling_random_vectors_plot_python_randomvector.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_probabilistic_modeling_random_vectors_plot_python_randomvector.py:


Create a random vector
======================

.. GENERATED FROM PYTHON SOURCE LINES 7-15

In this example we are going to create a distribution or copula.

The way to go is inheriting the :class:`~openturns.PythonRandomVector` class and overload its methods:

- `:meth:`~openturns.PythonRandomVector.getRealization`
- `:meth:`~openturns.PythonRandomVector.getSample`
- `:meth:`~openturns.PythonRandomVector.getMean`
- `:meth:`~openturns.PythonRandomVector.getCovariance`

.. GENERATED FROM PYTHON SOURCE LINES 17-22

.. code-block:: Python

    import openturns as ot

    ot.Log.Show(ot.Log.NONE)









.. GENERATED FROM PYTHON SOURCE LINES 23-24

Inherit :class:`~openturns.PythonRandomVector`

.. GENERATED FROM PYTHON SOURCE LINES 24-48

.. code-block:: Python

    class RVEC(ot.PythonRandomVector):
        def __init__(self):
            super(RVEC, self).__init__(2)
            self.setDescription(["R", "S"])

        def getRealization(self):
            X = [ot.RandomGenerator.Generate(), 2.0 + ot.RandomGenerator.Generate()]
            return X

        def getSample(self, size):
            X = []
            for i in range(size):
                X.append(
                    [ot.RandomGenerator.Generate(), 2.0 + ot.RandomGenerator.Generate()]
                )
            return X

        def getMean(self):
            return [0.5, 2.5]

        def getCovariance(self):
            return [[1.0, 0.0], [0.0, 1.0]]









.. GENERATED FROM PYTHON SOURCE LINES 49-50

Instantiate the distribution

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: Python

    randomVector = ot.RandomVector(RVEC())








.. GENERATED FROM PYTHON SOURCE LINES 53-54

Get a sample

.. GENERATED FROM PYTHON SOURCE LINES 54-56

.. code-block:: Python

    randomVector.getSample(5)






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>v0</th><th>v1</th></tr>
      <tr><th>0</th><td>0.9821798</td><td>2.841012</td></tr>
      <tr><th>1</th><td>0.6759157</td><td>2.48965</td></tr>
      <tr><th>2</th><td>0.8249036</td><td>2.497589</td></tr>
      <tr><th>3</th><td>0.8627384</td><td>2.708739</td></tr>
      <tr><th>4</th><td>0.2514626</td><td>2.782394</td></tr>
    </table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 57-58

Get mean

.. GENERATED FROM PYTHON SOURCE LINES 58-60

.. code-block:: Python

    randomVector.getMean()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    class=Point name=Unnamed dimension=2 values=[0.5,2.5]
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 61-62

Compute the probability contained in an interval

.. GENERATED FROM PYTHON SOURCE LINES 62-63

.. code-block:: Python

    randomVector.getCovariance()





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[[ 1 0 ]<br>
     [ 0 1 ]]</p>
    </div>
    <br />
    <br />


.. _sphx_glr_download_auto_probabilistic_modeling_random_vectors_plot_python_randomvector.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_python_randomvector.ipynb <plot_python_randomvector.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_python_randomvector.py <plot_python_randomvector.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_python_randomvector.zip <plot_python_randomvector.zip>`
